Revert "Fixes FB Like button share box getting cropped. - toodlepip"
This reverts commit 8c2a7992ef94ad93e641d526dbcc04cf22e959bd.

--- a/digg-digg/css/diggdigg-style.css
+++ b/digg-digg/css/diggdigg-style.css
@@ -176,10 +176,6 @@
 	float:left;
 	padding:4px
 }
-.dd_button .fb_iframe_widget iframe {
-	max-width: inherit;
-}
-
 
 .dd_fblike_xfbml_ajax_left_float {
 	padding-left:3px
